<resources>
<string name="title">Mi Aplicacin</string>
    <string name="hello_world">Hello world</string>
    <string name="hello">Hello World, SqliteDBActivity!</string>
    <string name="app_name">fitness4.me</string>
    <string name="aboutyourself">Please tell us about yourself</string>
    <string name="linkterms"><u>Terms of use</u></string>
     <string name="linkpolicy"><u>Privacy policy</u></string>
    <string name="servername">http://fitness4.me/mobile/testjson.php?</string>
    <string name="videourl">http://fitness4.me/</string>
    <string name="name">Name</string>
    <string name="iam">I am</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="accepttext">Shortly you will receive an email with a link to your personal login to our website. Here you can find statistics on your traing. Don\'t worry, it\'s free we do not share your data with anyone</string>
</resources>